# learningC

./: .gitignore  CMakeLists.txt  README.md  main.c
data/: init.txt
src/: MArray.c  MArray.h  MConst.c  MConst.h  MEnum.c  MEnum.h  MFile.c  MFile.h  MString.c  MString.h  MStruct.c  MStruct.h  MUnion.c  MUnion.h  main.c  myString.c  myString.h  myStruct.c  myStruct.h
src/film/: Film.c  Film.h
